# holotomocupy

./: .gitignore  LICENSE  README.md  setup.py
coded_apertures/3d_ald/: modeling.ipynb  plot.ipynb  rec_iterative.ipynb  rec_reprojection.ipynb
coded_apertures/siemens_star/: modeling.ipynb  rec_iterative.ipynb
docs/source/: api.rst  conf.py  index.rst  install.rst  usage.rst
envs/: requirements.txt
examples_synthetic/3d_ald/: modeling.ipynb  modeling.py  rec_1step.ipynb  rec_iterative.ipynb  rec_iterative.py
examples_synthetic/data/: angles_rad.npy
examples_synthetic/siemens_star/: modeling.ipynb  rec_1step.ipynb
experimental/nanomax/: find_center.py  mpipeline.sh  reccrop_align.py  sort.py
holotomo/: __init__.py  chunking.py  cuda_kernels.py  holo.py  magnification.py  proc.py  recon_methods.py  shift.py  tomo.py
holotomocupy/: __init__.py  chunking.py  cuda_kernels.py  holo.py  magnification.py  proc.py  recon_methods.py  shift.py  tomo.py  utils.py
src/cuda/: CMakeLists.txt  holo.cu  holo.i  holotomo.cu  holotomo.i  kernels_holo.cu  kernels_holotomo.cu  tomo.cu  tomo.i
src/holotomo/: __init__.py  fresnel_1d.py  holo.py  solver_holo.py  solver_tomo.py  tomo.py
src/include/: holo.cuh  holotomo.cuh  tomo.cuh
src/ptychotomo/: .solver_holotomo.py.swp  solver_admm.py  solver_holotomo.py
tests/: best.py  fixedprobe.py  fresnel_1d.py  perf.py  regular.py  test_holo.py  test_holo_operators.py  test_holotomo.py  test_tomo.py  test_tomo_operators.py  tt.py  twostep.py
tests/3d_ald/: rec.py  rec_final.py  rec_final_noprobe.py  run.sh
(+47 files in other folders)
